Added functionality for creating menu item & UI changes in all the pages.

--- a/src/handlers/Menu/default.scss
+++ b/src/handlers/Menu/default.scss
@@ -1,7 +1,3 @@
-body {
-  
-}
-
 a {
   text-decoration: none;
 }
@@ -14,4 +10,38 @@ a {
     font-size: 12px;
   }
 
+}
+
+.products {
+  margin-bottom: 20px;
+
+  h2 {
+    font-size: 16px;
+  }
+}
+
+.product-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    float: left;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    width: 220px;
+    border: 1px solid #CCC;
+    text-align: center;
+    height: 270px;
+    font-size: 14px;
+
+    img {
+      width: 220px;
+    }
+
+    .price {
+      color: #21a024;
+    }
+
+  }
 }
