--- a/src/handlers/Home/Home.scss
+++ b/src/handlers/Home/Home.scss
@@ -15,6 +15,11 @@ table {
     th,
     td {
       padding: 5px;
+    }
+  }
+
+  &.orders-list {
+    td {
       border-bottom: 1px solid #CCCCCC;
     }
   }
