Fixed menu selection issue & increased with of the input fields.

--- a/src/handlers/Home/Home.scss
+++ b/src/handlers/Home/Home.scss
@@ -18,7 +18,8 @@ table {
     }
   }
 
-  &.orders-list {
+  &.orders-list,
+  &.order-items {
     td {
       border-bottom: 1px solid #CCCCCC;
     }
